--- a/Styles.css
+++ b/Styles.css
@@ -9,6 +9,9 @@ a{
     text-decoration: none;
     color: #000;
 }
+html{
+    background: #1A1B20;
+}
 /*********************** Head titles *****************/
 .head{
     width: 100%;
@@ -17,8 +20,8 @@ a{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999;
-    background: #fff;
+    z-index: 9999;  
+    background: #1A1B20;
 }
 .head .container{
     width: 90%;
@@ -31,8 +34,9 @@ a{
    grid-column-start: span 1; 
 }
 .head .container .img img{
-    width: 140px;
-    height: 55px;
+    width: 95px;
+    height: 75px;
+    border-radius: 50%;
 }
 .head .container .titles{
     align-items: center;
@@ -44,11 +48,12 @@ a{
     grid-template-columns: repeat(6,1fr);
 }
 .head .container .titles ul li{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
     text-align: center;
     list-style: none;
     cursor: pointer;
+    color: #FA5252;
 }
 .head .container .titles ul li i{
     font-size: 25px;
@@ -57,11 +62,11 @@ a{
     display: none;
 }
 .head .container .titles ul li:hover{
-    color: #A5C3C0;
+    color: #0B6EFE;
     transition: 0.5s;
 }
 .head .container .titles .current-title{
-    color: #A5C3C0;
+    color: #0B6EFE;
     font-weight: 600;
 }
 /********************* Head Click *********************/
@@ -74,7 +79,7 @@ a{
     top: 0;
     left: 0;
     height: 50vh;
-    background: #fff;
+    background: #1A1B20;
     transform: translateY(-100%);
     transition: 0.3s;
 }
@@ -86,14 +91,15 @@ a{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     padding: 12px 0;
+    color: #fff;
 }
 .head-click .container ul li:hover{
-    color: #A5C3C0;
+    color: #0B6EFE;
     transition: 0.4s;
     cursor: pointer;
 }
 .head-click .container ul .current-title{
-    color: #A5C3C0;
+    color: #0B6EFE;
     font-weight: 600;
     font-size: 19px;
 }
@@ -117,7 +123,7 @@ a{
     flex-direction: column;
 }
 .img-head .container h1{
-    color:#76C03C;
+    color:#0B6EFE;
     font-size: 55px;
     font-family: 'Poppins', sans-serif;
     padding: 20px 0;
@@ -132,7 +138,7 @@ a{
 .img-head .container button{
     width: 150px;
     height: 45px;
-    background: #A5C3C0;
+    background: #0B6EFE;
     color: #fff;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -147,13 +153,14 @@ a{
 .important{
     width: 100%;
     margin: 20px 0;
+    background: #1A1B20;
 }
 .important h1{
     text-align: center;
     font-size: 45px;
     padding: 35px 0;
     font-family: 'Poppins', sans-serif;
-    color: #76C03C;
+    color: #F6C41B;
     font-weight: 300;
 }
 .important .container{
@@ -188,6 +195,7 @@ a{
     line-height: 25px;
     font-family: 'Roboto', sans-serif;
     text-align: justify;
+    color: #fff;
 }
 .imports .characteristics i{
     font-size: 50px;
@@ -196,17 +204,17 @@ a{
     justify-content: center;
     align-items: center;
 }
-/************************** About *************************/
+/** About */
 .about{
     width: 100%;
-    background: #FCFCFC;
+    background: #1A1B20;
     padding: 45px 0;
 }
 .about h1{
     text-align: center;
     font-size: 45px;
     font-weight: 300;
-    color: #76C03C;
+    color: #F6C41B;
     padding: 35px 0;
     font-family: 'Poppins', sans-serif;
 }
@@ -214,6 +222,7 @@ a{
     text-align: center;
     width: 600px;
     margin: auto;
+    color: #fff;
 }
 .about .container{
     width: 85%;
@@ -226,14 +235,14 @@ a{
     height: 330px;
     margin: auto;
     text-align: center;
-    background: linear-gradient(#A5C3C0,#76C03C);
+    background: linear-gradient(#fff,#F6C41B);
     border-radius: 18px;
     font-family: 'Roboto', sans-serif;
 }
 .about .container .mision h2, .about .container .vision h2{
     font-size: 20px;
     padding: 25px 0;
-    
+
 }
 .about .container .mision p, .about .container .vision p{
     font-size: 16px;
@@ -242,14 +251,15 @@ a{
     font-weight: 200;
     line-height: 25px;
 }
-/*************************Steps****************************/
+/*Steps**/
 .steps{
     width: 100%;
     margin: 30px 0;
+    background: #1A1B20;
 }
 .steps h1{
     text-align: center;
-    color: #76C03C;
+    color: #F6C41B;
     font-size: 45px;
     font-weight: 300;
     font-family: 'Poppins', sans-serif;
@@ -279,6 +289,15 @@ a{
     font-family: 'Roboto', sans-serif;
     width: 80%;
 }
+.steps .container .step h2{
+    color: #FA5252;
+    font-family: 'Roboto', sans-serif;
+    padding: 25px 0;
+    text-align: center;
+}
+iframe{
+    width: 100%;
+}
 .steps .container .step h5{
     font-weight: 300;
     padding: 5px 0;
@@ -289,7 +308,7 @@ a{
 }
 .steps .container .step_2{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(1,1fr);
 }
 .steps .container .step_2 img{
     width: 200px;
@@ -304,18 +323,17 @@ a{
     display: flex;
     justify-content: center;
 }
-
-/**/
+/*Services*/
 .services{
     width: 100%;
-    background: #FCFCFC;
+    background: #1A1B20;
     padding: 45px 0;
 }
 .services h1{
     text-align: center;
     font-size: 45px;
     font-weight: 300;
-    color: #76C03C;
+    color: #F6C41B;
     padding: 35px 0;
     font-family: 'Poppins', sans-serif;
 }
@@ -330,14 +348,13 @@ a{
     height: 330px;
     margin: auto;
     text-align: center;
-    background: linear-gradient(#A5C3C0,#76C03C);
+    background: linear-gradient(#FA5252,#1C1C1C);
     border-radius: 18px;
     font-family: 'Roboto', sans-serif;
 }
 .services .container .customers h2, .services .container .business h2{
     font-size: 20px;
     padding: 25px 0;
-    
 }
 .services .container .customers li, .services .container .business li{
     font-size: 16px;
@@ -346,7 +363,9 @@ a{
     font-weight: 200;
     line-height: 25px;
     list-style: none;
+    color: #fff;
 }
+
 /******************* Aplication ****************/
 .aplication{
     width: 100%;
@@ -364,7 +383,7 @@ a{
     flex-direction: column;
 }
 .aplication .container h1{
-    color: #76C03C;
+    color: #0B6EFE;
     font-size: 45px;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -380,7 +399,7 @@ a{
 .aplication .container button{
     width: 150px;
     height: 45px;
-    background: #A5C3C0;
+    background: #0B6EFE;
     color: #fff;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -396,6 +415,7 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #1A1B20;
 }
 footer .container{
     width: 85%;
@@ -406,8 +426,9 @@ footer .container{
     align-items: center;
 }
 footer .container img{
-    width: 120px;
-    height: 50px;
+    width: 85px;
+    height: 65px;
+    border-radius: 50%;
 }
 footer .container .social_media{
     display: flex;
@@ -417,17 +438,19 @@ footer .container .social_media i{
     margin: 0 15px;
     font-size: 20px;
     border-radius: 50%;
-    border: 1px solid #76C03C;
-    padding: 8px 11px;
+    color: #fff;
+    border: 1px solid #0B6EFE;
+    width: 45px;
+    height: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 }
 footer .container .social_media i:hover{
-    background: #000;
-    color: #76C03C;
-    border: 1px solid #000;
+    background: #1A1B20;
+    color: #0B6EFE;
+    border: 1px solid #0B6EFE;
     transition: 0.5s;
 }
 .aparecer{
@@ -449,7 +472,7 @@ footer .container .social_media i:hover{
         justify-content: end;
     }
     .moon{
-        padding: 0 25px; 
+        padding: 0 25px;
     }
 }
 @media screen and (max-width:900px){
@@ -512,7 +535,7 @@ footer .container .social_media i:hover{
     .steps .container .step_2, .steps .container .step_3{
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(2,1fr);
+        grid-template-columns: repeat(1,1fr);
     }
     .steps .container .step_2 img, .steps .container .step_2 .inform_step{
         grid-column-start: span 2;
@@ -572,5 +595,10 @@ footer .container .social_media i:hover{
     }
     .important h1, .about h1, .steps h1, .services h1{
         font-size: 35px;
+    }
+}
+@media screen and (max-width:360px){
+    .img-head .container p{
+        width: 80%;
     }
 }
